# dumbWASD

./: .gitignore  AZERON_ANALYSIS_PROGRESS.md  Cargo.toml  GRID_CODEBASE_BACKUP.md  NEXT_STEPS.md  PLAN.md  yume.sh
assets/: 99-azeron.rules
crates/dumbwasd-cli/: Cargo.toml
crates/dumbwasd-cli/src/: main.rs
crates/dumbwasd-core/: Cargo.toml
crates/dumbwasd-core/src/: lib.rs
crates/dumbwasd-core/src/core/: config.rs  engine.rs  event.rs  layout.rs  mapping.rs  mod.rs  profile.rs
crates/dumbwasd-core/src/devices/: azeron.rs  logitech.rs  mod.rs  registry.rs
crates/dumbwasd-core/src/platform/: mod.rs
crates/dumbwasd-core/src/platform/linux/: input.rs  mod.rs  output.rs
devices/: azeron-cyborg.toml  glove80-right.toml  glove80.toml
docs/: BINDING_SYSTEM_DESIGN.md  MULTI_DEVICE_STRATEGY.md  TAURI_GUI_PLAN.md  UI_DESIGN_REFERENCE.md  XBOX_SVG_LAYER_MAP.md  azeron-button-mapping.md  azeron-device-data.md  azeron-protocol-reference.md
gui/: index.html  overlay.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
gui/src/: App.ts  binding-popover.ts  button-face.tsx  button-grid.ts  button-layout.ts  device-bar.ts  device-context-menu.ts  device-delete-dialog.ts  device-modal.ts  device-properties-dialog.ts  device-selector.ts  input-codes.ts  keyboard-joystick.ts  layout-unsaved-dialog.ts  macro-flow-prototype.tsx  macro-studio.ts  main.ts  overlay.ts  profile-drawer.ts  react-flow-editor.tsx  style.css  vite-env.d.ts
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/capabilities/: default.json
gui/src-tauri/src/: events.rs  main.rs
layouts/: azeron-cyborg-grid-backup.toml  azeron-cyborg.toml  azeron-ltd-azeron-keypad.toml
profiles/: default.toml
