[package]
name = "dumbwasd-gui"
version = "0.1.0"
edition = "2021"
description = "GUI visualizer for dumbWASD"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dumbwasd-core = { path = "../../crates/dumbwasd-core" }
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
anyhow = "1"
indexmap = { version = "2", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
